[workspace]
resolver = "2"

members = ["unidir_events", "synced_bevy_query"]

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false }
bevy-inspector-egui = "0.31.0"
bevy_rand = { version = "0.11.0", features = ["wyrand"] }
console_error_panic_hook = "0.1.7"
#getrandom = { version = "0.3.1", features = ["js"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
leptos = { version = "0.8.2", features = ["csr"] }
leptos-bevy-canvas = { path = "../../leptos-bevy-canvas" }
leptos-bevy-canvas-examples = { path = "." }
leptos-use = "0.15.7"
rand_core = "0.9.3"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
uuid = { version = "1.17.0", features = ["rng-getrandom"] }

[package]
name = "leptos-bevy-canvas-examples"
version = "0.3.5"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
